--- a/main_app/templates/main_app/footer.html
+++ b/main_app/templates/main_app/footer.html
@@ -1,41 +1,43 @@
 {% load static %}
-<footer class="footer bg-dark text-white py-5">
+<link rel="stylesheet" type="text/css" href="{% static 'css/footer_styles.css' %}">
+
+<footer class="footer">
     <div class="container">
-        <div class="row gy-4">
+        <div class="row">
             <!-- About section -->
-            <div class="col-md-4">
-                <h5 class="mb-3 text-light">Tietoa meistä</h5>
-                <p class="text-light-emphasis">
+            <div class="col-md-4 mb-4 mb-md-0">
+                <h5>Tietoa meistä</h5>
+                <p>
                     KoodiGuru on suomalainen ohjelmointikurssien ja algoritmihaasteiden palvelu, 
                     joka auttaa sinua kehittämään taitojasi ja valmistautumaan työhaastatteluihin.
                 </p>
             </div>
 
             <!-- Links section -->
-            <div class="col-md-4">
-                <h5 class="mb-3 text-light">Linkkejä</h5>
+            <div class="col-md-4 mb-4 mb-md-0">
+                <h5>Linkkejä</h5>
                 <ul class="list-unstyled">
-                    <li class="mb-2">
-                        <a href="{% url 'main_app:course_list' %}" class="text-decoration-none link-light">Kurssit</a>
+                    <li>
+                        <a href="{% url 'main_app:course_list' %}">Kurssit</a>
                     </li>
-                    <li class="mb-2">
-                        <a href="{% url 'main_app:contact' %}" class="text-decoration-none link-light">Yhteystiedot</a>
+                    <li>
+                        <a href="{% url 'main_app:contact' %}">Yhteystiedot</a>
                     </li>
                 </ul>
             </div>
 
             <!-- Contact section -->
             <div class="col-md-4">
-                <h5 class="mb-3 text-light">Ota yhteyttä</h5>
-                <p class="text-light-emphasis">Email: koodiguruoficial@gmail.com</p>
+                <h5>Ota yhteyttä</h5>
+                <div class="contact-info">
+                    <p>Email: koodiguruoficial@gmail.com</p>
+                </div>
             </div>
         </div>
 
-        <!-- Logo and copyright -->
-        <div class="row mt-5">
-            <div class="col-md-12 text-center">
-                <p class="text-light-emphasis mb-0">&copy; 2025 KoodiGuru. Kaikki oikeudet pidätetään.</p>
-            </div>
+        <!-- Copyright -->
+        <div class="copyright">
+            <p>&copy; 2025 KoodiGuru. Kaikki oikeudet pidätetään.</p>
         </div>
     </div>
 </footer>
